--- a/Задание 1/Level 1/Level 2/index.html
+++ b/Задание 1/Level 1/Level 2/index.html
@@ -129,11 +129,11 @@
                 <h2 class="text-center"><u>Калькулятор</u></h2>
                 <label>Выберите товар:</label>
                 <select class="form-control mb-3" id="productSelect">
-                    <option value="healthyMind">Здоровая психика</option>
-                    <option value="extraTime">Дополнительное время</option>
-                    <option value="goodHealth">Хорошее здоровье</option>
-                    <option value="friends">Друзья</option>
-                    <option value="skillImprovement">Улучшение навыков</option>
+                    <option value="mandarin">Мандарин</option>
+                    <option value="grusha">Груша</option>
+                    <option value="kiwi">Киви</option>
+                    <option value="cherry">Вишня</option>
+                    <option value="pineapple">Ананас</option>
                 </select>
                 <label>Введите количество товара:</label>
                 <input type="text" id="quantityField" class="form-control mb-3"/>
